examples/negative/handle_leak/handle_unknown_op.kai
# Negative fixture (#511 / handle contract): a `with Io { ... }`
# clause references an op (`print_io`) that is not declared on
# `Io` (here `Io` does not even exist as an effect with that op).
# Typer must reject naming the offending op.

effect Io { print_io(s: String) : Unit }

fn main() : Int {
  handle {
    Io.print_io("a")
    0
  } with NotAnEffect {
    print_io(s, resume) -> resume(())
    return(x)           -> x
  }
}
